--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,9 @@
     "directory": "packages/ui"
   },
   "license": "Apache-2.0",
-  "sideEffects": true,
+  "sideEffects": [
+    "*.css"
+  ],
   "main": "src/index.ts",
   "types": "src/index.ts",
   "files": [
