--- a/docs-ui/package.json
+++ b/docs-ui/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "lint": "next lint",
     "prestart": "yarn sync:css",
-    "start": "concurrently \"yarn sync:css:watch\" \"next dev\"",
+    "start": "next dev",
     "sync:css": "node scripts/sync-css.js",
     "sync:css:watch": "node scripts/sync-css.js --watch"
   },
@@ -44,7 +44,6 @@
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
     "chokidar": "^3.6.0",
-    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "15.3.4",
     "lightningcss": "^1.28.2",
