--- a/plugins/app-visualizer/package.json
+++ b/plugins/app-visualizer/package.json
@@ -37,8 +37,8 @@
     "@backstage/core-components": "workspace:^",
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/frontend-plugin-api": "workspace:^",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.9.1"
+    "@backstage/ui": "workspace:^",
+    "@remixicon/react": "^4.6.0"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
