app-visualizer: BUI migration detailed fixes and cleanup
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/plugins/app-visualizer/package.json
+++ b/plugins/app-visualizer/package.json
@@ -38,7 +38,8 @@
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/frontend-plugin-api": "workspace:^",
     "@backstage/ui": "workspace:^",
-    "@remixicon/react": "^4.6.0"
+    "@remixicon/react": "^4.6.0",
+    "react-aria-components": "^1.13.0"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
