--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -39,7 +39,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "config.d.ts"
   ],
   "scripts": {
     "build": "backstage-cli package build",
@@ -51,6 +52,7 @@
     "test": "backstage-cli package test"
   },
   "dependencies": {
+    "@backstage/core-compat-api": "workspace:^",
     "@backstage/core-components": "workspace:^",
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/errors": "workspace:^",
@@ -60,6 +62,7 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "lodash": "^4.17.21",
     "react-json-view": "^1.21.3",
     "react-use": "^17.2.4"
   },
@@ -67,6 +70,7 @@
     "@backstage/cli": "workspace:^",
     "@backstage/dev-utils": "workspace:^",
     "@testing-library/jest-dom": "^6.0.0",
+    "@types/lodash": "^4.14.151",
     "@types/react": "^18.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
@@ -82,5 +86,6 @@
     "@types/react": {
       "optional": true
     }
-  }
+  },
+  "configSchema": "config.d.ts"
 }
