--- a/microsite/package.json
+++ b/microsite/package.json
@@ -45,9 +45,11 @@
     "@docusaurus/module-type-aliases": "^3.1.1",
     "@docusaurus/tsconfig": "^3.1.1",
     "@types/luxon": "^3.0.0",
+    "@types/semver": "^7",
     "@types/webpack-env": "^1.18.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.6.2",
+    "semver": "^7.7.3",
     "typescript": "~5.2.0",
     "yaml-loader": "^0.8.0"
   }
