feat(docs-ui): add automated changelog sync from @backstage/ui
Adds automated synchronization of component changelogs from
@backstage/ui package to the documentation site, eliminating
manual changelog maintenance.

The sync script parses CHANGELOG.md using remark/unified, extracts
component-specific entries via "Affected components:" tags, and
generates per-version TypeScript files with preserved markdown
formatting. Includes GitHub API integration to automatically fetch
PR numbers for changelog entries.

Key features:
- Version comparison to sync only new releases
- Per-version file structure (changelogs/v0.2.0.ts, etc.)
- Markdown preservation via AST position slicing
- Component name mapping (PascalCase → kebab-case)
- Duplicate detection for idempotent syncing
- GitHub authentication via gh CLI or GITHUB_TOKEN
- Dry-run mode with preview

Usage:
```bash
yarn sync:changelog              # Sync new entries
yarn sync:changelog:dry-run      # Preview changes
```

Technical changes:
- Added scripts/sync-changelog.mjs (991 lines)
- Refactored changelog.ts to import per-version files
- Extracted types to separate types.ts file
- Added dependencies: @octokit/rest, unified (remark-parse via @mdx-js/mdx)
- Added documentation in README.md

Signed-off-by: Johan Persson <johanopersson@gmail.com>

--- a/docs-ui/package.json
+++ b/docs-ui/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint",
     "prestart": "yarn sync:css",
     "start": "next dev",
+    "sync:changelog": "node scripts/sync-changelog.mjs",
+    "sync:changelog:dry-run": "node scripts/sync-changelog.mjs --dry-run",
     "sync:css": "node scripts/sync-css.js",
     "sync:css:watch": "node scripts/sync-css.js --watch"
   },
@@ -39,6 +41,7 @@
     "storybook": "^8.6.12"
   },
   "devDependencies": {
+    "@octokit/rest": "^22.0.1",
     "@shikijs/transformers": "^3.13.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
@@ -48,6 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.3.4",
     "lightningcss": "^1.28.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "unified": "^11.0.4"
   }
 }
