Reorganize Backstage getting started documentation
Adding new subheading, "Managing Components" and put Registering a Component and Creating a Component under it. Also added a new Updating a Component page to the section.

Added a new UI Overview page before the Managing Components subheading.

Signed-off-by: milliehartnt123 <108491788+milliehartnt123@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,8 +37,11 @@ nav:
           - Kubernetes: 'deployment/k8s.md'
       - Using Backstage:
           - Logging in: 'getting-started/logging-in.md'
-          - Register a component: 'getting-started/register-a-component.md'
-          - Create a component: 'getting-started/create-a-component.md'
+          - UI overview: 'getting-started/ui-overview.md'
+          - Managing Components:
+            - Creating a component: 'getting-started/create-a-component.md'
+            - Registering a component: 'getting-started/register-a-component.md'
+            - Updating a component: 'getting-started/'update-a-component.md'
       - Keeping Backstage Updated: 'getting-started/keeping-backstage-updated.md'
   - Core Features:
       - Software Catalog:
