feature(catalog export): update deps
Signed-off-by: the-serious-programmer <19777147+the-serious-programmer@users.noreply.github.com>

--- a/plugins/catalog-backend-module-export/package.json
+++ b/plugins/catalog-backend-module-export/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@backstage/backend-defaults": "workspace:^",
     "@backstage/backend-plugin-api": "workspace:^",
+    "@backstage/catalog-client": "workspace:^",
     "@backstage/catalog-model": "workspace:^",
     "@backstage/errors": "workspace:^",
     "@backstage/plugin-catalog-node": "workspace:^",
