Bitbucket Cloud - API Token Support
Signed-off-by: Andre Wanlin <awanlin@spotify.com>
Signed-off-by: the-serious-programmer <19777147+the-serious-programmer@users.noreply.github.com>

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -110,7 +110,7 @@ integrations:
   ### Example for how to add a bitbucket cloud integration
   # bitbucketCloud:
   #   - username: ${BITBUCKET_USERNAME}
-  #     appPassword: ${BITBUCKET_APP_PASSWORD}
+  #     token: ${BITBUCKET_API_TOKEN}
   ### Example for how to add your bitbucket server instance using the API:
   # - host: server.bitbucket.com
   #   apiBaseUrl: server.bitbucket.com
