Remove undici and old mocks
Signed-off-by: enyineer <nico.enking@gmail.com>

--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -51,8 +51,7 @@
     "handlebars": "^4.7.3",
     "inquirer": "^8.2.0",
     "ora": "^5.3.0",
-    "recursive-readdir": "^2.2.2",
-    "undici": "^7.2.3"
+    "recursive-readdir": "^2.2.2"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
