add new patch release process
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,6 +11,7 @@ yarn.lock                                         @backstage/maintainers @backst
 /.changeset/*.md
 /.github                                          @backstage/operations-maintainers
 /.github/vale                                     @backstage/documentation-maintainers
+/.patches                                         @backstage/operations-maintainers
 /beps/0001-notifications-system                   @backstage/maintainers @backstage/notifications-maintainers
 /docs                                             @backstage/maintainers @backstage/documentation-maintainers
 /docs/assets/search                               @backstage/search-maintainers
