--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,8 +37,14 @@ nav:
           - Kubernetes: 'deployment/k8s.md'
       - Using Backstage:
           - Logging in: 'getting-started/logging-in.md'
-          - Register a component: 'getting-started/register-a-component.md'
-          - Create a component: 'getting-started/create-a-component.md'
+          - Viewing the Catalog: 'getting-started/viewing-catalog.md'
+          - Viewing what you own: 'getting-started/view-what-you-own.md'
+          - Viewing entity relationships: 'getting-started/viewing-entity-relationships.md'
+          - Managing Components:
+              - Register a component: 'getting-started/register-a-component.md'
+              - Create a component: 'getting-started/create-a-component.md'
+              - Update a component: 'getting-started/update-a-component.md'
+          - Searching the Catalog: 'getting-started/search-catalog.md'
       - Keeping Backstage Updated: 'getting-started/keeping-backstage-updated.md'
   - Core Features:
       - Software Catalog:
