--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -29,6 +29,7 @@
     "./httpRouter": "./src/entrypoints/httpRouter/index.ts",
     "./lifecycle": "./src/entrypoints/lifecycle/index.ts",
     "./logger": "./src/entrypoints/logger/index.ts",
+    "./mikroOrm": "./src/entrypoints/mikroOrm/index.ts",
     "./permissionsRegistry": "./src/entrypoints/permissionsRegistry/index.ts",
     "./permissions": "./src/entrypoints/permissions/index.ts",
     "./rootConfig": "./src/entrypoints/rootConfig/index.ts",
@@ -72,6 +73,9 @@
       ],
       "logger": [
         "src/entrypoints/logger/index.ts"
+      ],
+      "mikroOrm": [
+        "src/entrypoints/mikroOrm/index.ts"
       ],
       "permissionsRegistry": [
         "src/entrypoints/permissionsRegistry/index.ts"
@@ -150,6 +154,9 @@
     "@keyv/redis": "^4.0.1",
     "@keyv/valkey": "^1.0.1",
     "@manypkg/get-packages": "^1.1.3",
+    "@mikro-orm/better-sqlite": "^6.6.1",
+    "@mikro-orm/core": "^6.6.1",
+    "@mikro-orm/postgresql": "^6.6.1",
     "@octokit/rest": "^19.0.3",
     "@opentelemetry/api": "^1.9.0",
     "@types/cors": "^2.8.6",
