--- a/packages/backend-plugin-api/package.json
+++ b/packages/backend-plugin-api/package.json
@@ -60,7 +60,6 @@
     "@backstage/plugin-permission-common": "workspace:^",
     "@backstage/plugin-permission-node": "workspace:^",
     "@backstage/types": "workspace:^",
-    "@opentelemetry/api": "^1.9.0",
     "@types/express": "^4.17.6",
     "@types/json-schema": "^7.0.6",
     "@types/luxon": "^3.0.0",
@@ -68,6 +67,9 @@
     "knex": "^3.0.0",
     "luxon": "^3.0.0",
     "zod": "^3.22.4"
+  },
+  "peerDependencies": {
+    "@opentelemetry/api": "^1.9.0"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
