--- a/packages/core-components/package.json
+++ b/packages/core-components/package.json
@@ -58,6 +58,7 @@
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/errors": "workspace:^",
     "@backstage/theme": "workspace:^",
+    "@backstage/ui": "workspace:^",
     "@backstage/version-bridge": "workspace:^",
     "@dagrejs/dagre": "^1.1.4",
     "@date-io/core": "^1.3.13",
@@ -66,6 +67,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@react-hookz/web": "^24.0.0",
+    "@remixicon/react": "^4.6.0",
     "@testing-library/react": "^16.0.0",
     "@types/react-sparklines": "^1.7.0",
     "ansi-regex": "^6.0.1",
