--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
+    "@backstage/ui": "workspace:^",
     "@types/command-exists": "^1.2.0",
     "@types/fs-extra": "^11.0.0",
     "@types/inquirer": "^8.1.3",
