--- a/packages/cli-common/package.json
+++ b/packages/cli-common/package.json
@@ -35,11 +35,14 @@
     "test": "backstage-cli package test"
   },
   "dependencies": {
+    "@backstage/errors": "workspace:^",
+    "cross-spawn": "^7.0.3",
     "global-agent": "^3.0.0",
     "undici": "^7.2.3"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
+    "@types/cross-spawn": "^6.0.2",
     "@types/node": "^20.16.0"
   }
 }
