--- a/plugins/catalog/package.json
+++ b/plugins/catalog/package.json
@@ -75,11 +75,13 @@
     "@backstage/plugin-techdocs-common": "workspace:^",
     "@backstage/plugin-techdocs-react": "workspace:^",
     "@backstage/types": "workspace:^",
+    "@backstage/ui": "workspace:^",
     "@backstage/version-bridge": "workspace:^",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/utils": "^5.14.15",
+    "@remixicon/react": "^4.6.0",
     "classnames": "^2.3.1",
     "dataloader": "^2.0.0",
     "history": "^5.0.0",
