--- a/plugins/techdocs-module-addons-contrib/package.json
+++ b/plugins/techdocs-module-addons-contrib/package.json
@@ -75,7 +75,8 @@
     "@types/react": "^18.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "shadow-dom-testing-library": "^1.13.1"
   },
   "peerDependencies": {
     "@types/react": "^17.0.0 || ^18.0.0",
