--- a/packages/cli/config/tsconfig.json
+++ b/packages/cli/config/tsconfig.json
@@ -13,8 +13,8 @@
     "isolatedModules": true,
     "jsx": "react",
     "lib": ["DOM", "DOM.Iterable", "ScriptHost", "ES2022"],
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "ES2020",
+    "moduleResolution": "bundler",
     "noEmit": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
