feat: Support to set defaultLanguage and availableLanguages in new frontend system
Signed-off-by: mario ma <mario.ma.node@gmail.com>

--- a/packages/app-next/app-config.yaml
+++ b/packages/app-next/app-config.yaml
@@ -21,6 +21,11 @@ app:
         ownerEntityRefs: [cubic-belugas]
 
   extensions:
+    # set availableLanguages example
+    - api:app/app-language:
+        config:
+          availableLanguages: ['en', 'es', 'fr', 'de', 'ja']
+          defaultLanguage: 'en'
     - entity-card:org/members-list:
         config:
           showAggregateMembersToggle: true
