fix rebase issues
Signed-off-by: aramissennyeydd <aramis.sennyey@doordash.com>

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -69,8 +69,7 @@
     "@opentelemetry/auto-instrumentations-node": "^0.61.0",
     "@opentelemetry/exporter-prometheus": "^0.54.0",
     "@opentelemetry/sdk-node": "^0.54.0",
-    "example-app": "link:../app",
-    "express-promise-router": "^4.1.0"
+    "example-app": "link:../app"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^"
