First pass at new table structure
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,7 +43,8 @@
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-table": "^8.21.3",
     "clsx": "^2.1.1",
-    "react-aria-components": "^1.13.0"
+    "react-aria-components": "^1.13.0",
+    "react-stately": "^3.42.0"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
