--- a/.github/workflows/verify_e2e-windows.yml
+++ b/.github/workflows/verify_e2e-windows.yml
@@ -28,7 +28,7 @@ jobs:
 
     env:
       CI: true
-      NODE_OPTIONS: --max-old-space-size=8192 --no-node-snapshot --experimental-vm-modules
+      NODE_OPTIONS: --max-old-space-size=8192 --experimental-vm-modules
 
     name: E2E Windows ${{ matrix.node-version }}
     steps:
