--- a/plugins/mcp-actions-backend/package.json
+++ b/plugins/mcp-actions-backend/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
+    "@cfworker/json-schema": "^4.1.1",
     "@types/express": "^4.17.6"
   }
 }
