--- a/package.json
+++ b/package.json
@@ -137,11 +137,12 @@
     "@octokit/rest": "^19.0.3",
     "@playwright/test": "^1.32.3",
     "@spotify/eslint-plugin": "^15.0.0",
-    "@storybook/addon-a11y": "^9.1.7",
-    "@storybook/addon-docs": "^9.1.7",
-    "@storybook/addon-links": "^9.1.7",
-    "@storybook/addon-themes": "^9.1.7",
-    "@storybook/react-vite": "^9.1.7",
+    "@storybook/addon-a11y": "^10.1.9",
+    "@storybook/addon-docs": "^10.1.9",
+    "@storybook/addon-links": "^10.1.9",
+    "@storybook/addon-themes": "^10.1.9",
+    "@storybook/addon-vitest": "^10.1.9",
+    "@storybook/react-vite": "^10.1.9",
     "@techdocs/cli": "workspace:*",
     "@types/cacheable-request": "^8.3.6",
     "@types/memjs": "^1.3.3",
@@ -167,7 +168,7 @@
     "shx": "^0.4.0",
     "sloc": "^0.3.1",
     "sort-package-json": "^2.8.0",
-    "storybook": "^9.1.7",
+    "storybook": "^10.1.9",
     "ts-morph": "^24.0.0",
     "typedoc": "^0.28.0",
     "typescript": "~5.7.0",
