--- a/microsite/package.json
+++ b/microsite/package.json
@@ -28,7 +28,7 @@
     "@docusaurus/preset-classic": "^3.1.1",
     "@docusaurus/types": "^3.1.1",
     "@mdx-js/react": "^3.0.0",
-    "@swc/core": "^1.15.5",
+    "@swc/core": "1.15.3",
     "clsx": "^2.0.0",
     "docusaurus-plugin-openapi-docs": "^4.3.0",
     "docusaurus-plugin-sass": "^0.2.3",
