--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -50,7 +50,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "chalk": "^5.4.1",
-    "eslint-plugin-storybook": "^10.1.9",
+    "eslint-plugin-storybook": "^10.2.0-alpha.7",
     "glob": "^11.0.1",
     "globals": "^15.11.0",
     "lightningcss": "^1.29.1",
@@ -58,7 +58,7 @@
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router-dom": "^6.3.0",
-    "storybook": "^10.1.10"
+    "storybook": "^10.2.0-alpha.7"
   },
   "peerDependencies": {
     "@types/react": "^17.0.0 || ^18.0.0",
