chore: Upgrade @acemir/cssom to fix some CSS parsing issues during tests
Signed-off-by: Gabriel Dugny <gabriel.dugny@believe.com>

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,6 +46,7 @@
     "react-aria-components": "^1.13.0"
   },
   "devDependencies": {
+    "@acemir/cssom": "^0.9.30",
     "@backstage/cli": "workspace:^",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
