--- a/packages/app-next/app-config.yaml
+++ b/packages/app-next/app-config.yaml
@@ -30,9 +30,9 @@ app:
         config:
           showAggregateMembersToggle: true
           initialRelationAggregation: aggregated
-    # - entity-card:org/ownership:
-    #     config:
-    #       entityFilterKind: ['Component', 'API', 'Resource', 'System']
+    - entity-card:org/ownership:
+        config:
+          entityFilterKind: ['Component', 'API', 'System']
 
     # - apis.plugin.graphiql.browse.gitlab: true
     # - graphiql-endpoint:graphiql/gitlab: true
