--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "@backstage/eslint-plugin": "workspace:*",
     "@backstage/repo-tools": "workspace:*",
     "@changesets/cli": "^2.14.0",
+    "@jest/environment-jsdom-abstract": "^30",
     "@octokit/rest": "^19.0.3",
     "@playwright/test": "^1.32.3",
     "@spotify/eslint-plugin": "^15.0.0",
@@ -145,6 +146,8 @@
     "@storybook/react-vite": "^10.1.9",
     "@techdocs/cli": "workspace:*",
     "@types/cacheable-request": "^8.3.6",
+    "@types/jest": "^30",
+    "@types/jsdom": "^27",
     "@types/memjs": "^1.3.3",
     "@types/node": "^22.13.14",
     "@types/webpack": "^5.28.0",
@@ -158,7 +161,9 @@
     "eslint-plugin-testing-library": "^6.0.0",
     "fs-extra": "^11.2.0",
     "husky": "^9.0.0",
+    "jest": "^30",
     "js-yaml": "^4.1.1",
+    "jsdom": "^27",
     "lint-staged": "^15.0.0",
     "madge": "^8.0.0",
     "minimist": "^1.2.5",
