fix(api-breaking-changes): add better comment identifier
Signed-off-by: aramissennyeydd <aramis.sennyey@doordash.com>

--- a/.github/workflows/api-breaking-changes-comment.yml
+++ b/.github/workflows/api-breaking-changes-comment.yml
@@ -115,7 +115,7 @@ jobs:
         with:
           issue-number: ${{ needs.setup.outputs.pr-number }}
           comment-author: 'github-actions[bot]'
-          body-includes: API changes
+          body-includes: api-breaking-changes-comment
           direction: last
 
       - name: Create or Update Comment with API Changes
