--- a/.github/workflows/api-breaking-changes.yml
+++ b/.github/workflows/api-breaking-changes.yml
@@ -40,6 +40,7 @@ jobs:
       - name: breaking changes check
         run: |
           yarn backstage-repo-tools repo schema openapi diff --since origin/${{ github.base_ref }} > comment.md
+          echo "<!-- api-breaking-changes-comment -->" >> comment.md
 
       - name: clone artifacts to current directory
         run: |
