--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -206,6 +206,7 @@
     "jsdom": "^27.1.0",
     "mini-css-extract-plugin": "^2.4.2",
     "terser-webpack-plugin": "^5.1.3",
+    "vitest": "^3.0.0",
     "webpack": "~5.103.0",
     "webpack-dev-server": "^5.0.0"
   },
@@ -238,6 +239,9 @@
       "optional": true
     },
     "terser-webpack-plugin": {
+      "optional": true
+    },
+    "vitest": {
       "optional": true
     },
     "webpack": {
