--- a/packages/app-next/package.json
+++ b/packages/app-next/package.json
@@ -93,6 +93,7 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.0.0",
+    "@types/jest": "^30.0.0",
     "@types/jquery": "^3.3.34",
     "@types/react": "*",
     "@types/react-dom": "*",
