--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,10 +2,15 @@ compressionLevel: mixed
 
 enableGlobalCache: true
 
+enableStrictSsl: false
+
 httpTimeout: 300000
 
 nodeLinker: node-modules
 
-npmRegistryServer: 'https://registry.npmjs.org/'
+npmRegistryServer: "https://registry.npmjs.org/"
 
-yarnPath: .yarn/releases/yarn-4.8.1.cjs
+unsafeHttpWhitelist:
+  - "*"
+
+yarnPath: .yarn/releases/yarn-4.5.3.cjs
