Add Technical overview to sidebar navigation
Signed-off-by: milliehartnt123 <108491788+milliehartnt123@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ plugins:
 nav:
   - Overview:
       - What is Backstage?: 'overview/what-is-backstage.md'
+      - Technical overview: 'overview/technical-overview.md'
       - Architecture overview: 'overview/architecture-overview.md'
       - Project Roadmap: 'overview/roadmap.md'
       - Vision: 'overview/vision.md'
