--- a/plugins/catalog-backend/package.json
+++ b/plugins/catalog-backend/package.json
@@ -71,6 +71,7 @@
     "@backstage/plugin-catalog-common": "workspace:^",
     "@backstage/plugin-catalog-node": "workspace:^",
     "@backstage/plugin-events-node": "workspace:^",
+    "@backstage/plugin-mcp-actions-backend": "workspace:^",
     "@backstage/plugin-permission-common": "workspace:^",
     "@backstage/plugin-permission-node": "workspace:^",
     "@backstage/types": "workspace:^",
