change to ownedKinds, cleanup test file a bit
Signed-off-by: Peter Macdonald <peterm4c@pm.me>

--- a/packages/app-next/app-config.yaml
+++ b/packages/app-next/app-config.yaml
@@ -32,7 +32,7 @@ app:
           initialRelationAggregation: aggregated
     - entity-card:org/ownership:
         config:
-          entityFilterKind: ['Component', 'API', 'System']
+          ownedKinds: ['Component', 'API', 'System']
 
     # - apis.plugin.graphiql.browse.gitlab: true
     # - graphiql-endpoint:graphiql/gitlab: true
