--- a/plugins/app-react/package.json
+++ b/plugins/app-react/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@backstage/plugin-app",
-  "version": "0.3.4-next.1",
+  "name": "@backstage/plugin-app-react",
+  "version": "0.0.0",
+  "description": "Web library for the app plugin",
   "backstage": {
-    "role": "frontend-plugin",
+    "role": "web-library",
     "pluginId": "app",
     "pluginPackages": [
       "@backstage/plugin-app",
@@ -12,32 +13,19 @@
     ]
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "main": "dist/index.esm.js",
+    "types": "dist/index.d.ts"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/backstage/backstage",
-    "directory": "plugins/app"
+    "directory": "plugins/app-react"
   },
   "license": "Apache-2.0",
   "sideEffects": false,
-  "exports": {
-    ".": "./src/index.ts",
-    "./alpha": "./src/alpha/index.ts",
-    "./package.json": "./package.json"
-  },
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "typesVersions": {
-    "*": {
-      "alpha": [
-        "src/alpha/index.ts"
-      ],
-      "package.json": [
-        "package.json"
-      ]
-    }
-  },
   "files": [
     "dist"
   ],
@@ -51,33 +39,17 @@
     "test": "backstage-cli package test"
   },
   "dependencies": {
-    "@backstage/core-components": "workspace:^",
     "@backstage/core-plugin-api": "workspace:^",
     "@backstage/frontend-plugin-api": "workspace:^",
-    "@backstage/integration-react": "workspace:^",
-    "@backstage/plugin-app-react": "workspace:^",
-    "@backstage/plugin-permission-react": "workspace:^",
-    "@backstage/theme": "workspace:^",
-    "@backstage/types": "workspace:^",
-    "@backstage/version-bridge": "workspace:^",
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@react-hookz/web": "^24.0.0",
-    "react-use": "^17.2.4",
-    "zod": "^3.22.4"
+    "@material-ui/core": "^4.9.13"
   },
   "devDependencies": {
     "@backstage/cli": "workspace:^",
-    "@backstage/dev-utils": "workspace:^",
-    "@backstage/frontend-defaults": "workspace:^",
     "@backstage/frontend-test-utils": "workspace:^",
     "@backstage/test-utils": "workspace:^",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.0.0",
     "@types/react": "^18.0.0",
-    "msw": "^1.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router-dom": "^6.3.0"
