feat(scaffolder): simplify recovery to single taskRecovery.enabled config
Signed-off-by: benjdlambert <ben@blam.sh>

--- a/plugins/scaffolder-backend/package.json
+++ b/plugins/scaffolder-backend/package.json
@@ -59,7 +59,7 @@
     "prepack": "backstage-cli package prepack",
     "postpack": "backstage-cli package postpack",
     "start": "backstage-cli package start",
-    "test": "backstage-cli package test"
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules\" backstage-cli package test"
   },
   "dependencies": {
     "@backstage/backend-defaults": "workspace:^",
