--- a/plugins/api-docs/package.json
+++ b/plugins/api-docs/package.json
@@ -62,6 +62,7 @@
     "@backstage/plugin-catalog-common": "workspace:^",
     "@backstage/plugin-catalog-react": "workspace:^",
     "@backstage/plugin-permission-react": "workspace:^",
+    "@backstage/ui": "workspace:^",
     "@graphiql/react": "^0.23.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
